gatekeeper/pod-name-constraint.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: denypodbysubstring
spec:
  crd:
    spec:
      names:
        kind: DenyPodBySubstring
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            substring:
              type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package denypodbysubstring                                           

        violation[{ "msg": msg }] {
            input.review.kind.kind == "Pod"
            image := input.review.object.spec.containers[_].image
            contains(image, input.parameters.substring)
            msg := sprintf("image '%v' contains %v", [image, input.parameters.substring])
        }
